microk8s_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-toolbox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-toolbox-deployment
  namespace: ai-toolbox
  labels:
    app: ai-toolbox
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ai-toolbox
  template:
    metadata:
      labels:
        app: ai-toolbox
    spec:
      containers:
      - name: ai-toolbox
        image: microk8s-1:32000/ai-toolbox:registry
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: ai-toolbox-service
  namespace: ai-toolbox
spec:
  selector:
    app: ai-toolbox
  type: LoadBalancer
  loadBalancerIP: 192.168.70.201
  ports:
  - port: 8501
    targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-toolbox-ingress
  namespace: ai-toolbox
  annotations:
    kubernetes.io/ingress.class: ai-toolbox
spec:
  ingressClassName: ai-toolbox 
  rules:
  - host: microk8s-1.home   # Use a domain you control or add to /etc/hosts
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-toolbox-service
            port:
              number: 8501
  - host: microk8s-2.home   # Use a domain you control or add to /etc/hosts
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-toolbox-service
            port:
              number: 8501
